--- a/src/SerialLoops/Views/Dialogs/AddScenarioCommandDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/AddScenarioCommandDialog.axaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:assets="using:SerialLoops.Assets"
         xmlns:controls="using:SerialLoops.Controls"
+        xmlns:utility="using:SerialLoops.Utility"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:DataType="vm:AddScenarioCommandDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.AddScenarioCommandDialog"
@@ -15,12 +16,18 @@
         ExtendClientAreaChromeHints="NoChrome"
         Title="{x:Static assets:Strings.Add_Command}"
         Name="AddCommandDialog">
+
     <Panel>
         <controls:AcrylicBorderHandler/>
 
         <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto" VerticalAlignment="Center">
-            <TextBlock Text="{x:Static assets:Strings.Command_Type_}" Margin="10"/>
-            <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Verbs}" SelectedItem="{Binding SelectedVerb}" Margin="5"/>
+            <TextBlock Text="{x:Static assets:Strings.Command_Type_}" VerticalAlignment="Center" Margin="10"/>
+            <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal" Spacing="3" Margin="5">
+                <ComboBox ItemsSource="{Binding Verbs}"
+                          SelectedItem="{Binding SelectedVerb}"/>
+                <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                     ToolTip.Tip="{Binding SelectedVerb, Converter={x:Static utility:SLConverters.ScenarioVerbHelpConverter}}"/>
+            </StackPanel>
             <StackPanel Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Margin="10" Spacing="5" HorizontalAlignment="Right" Orientation="Horizontal">
                 <Button Content="{x:Static assets:Strings.Cancel}" Command="{Binding CancelCommand}" CommandParameter="{Binding #AddCommandDialog}" IsCancel="True"/>
                 <Button Content="{x:Static assets:Strings.Create}" Command="{Binding CreateCommand}" CommandParameter="{Binding #AddCommandDialog}" IsDefault="True"/>
