--- a/src/SerialLoops/Views/Editors/BackgroundEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/BackgroundEditorView.axaml
@@ -14,22 +14,33 @@
         <StackPanel Orientation="Vertical" Spacing="5" HorizontalAlignment="Left" VerticalAlignment="Top">
             <Image Source="{Binding BgBitmap, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
                    Width="{Binding BgBitmap.Width}" Height="{Binding BgBitmap.Height}"/>
-            <TextBlock Text="{Binding BgDescription}"/>
+            <StackPanel Orientation="Horizontal" Spacing="3">
+                <TextBlock Text="{Binding BgDescription}" VerticalAlignment="Center"/>
+                <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" ToolTip.Tip="{Binding DescriptionToolTip}"
+                     VerticalAlignment="Center"/>
+            </StackPanel>
             <StackPanel Orientation="Horizontal" Spacing="3">
                 <Button Content="{x:Static assets:Strings.Export}" Command="{Binding ExportCommand}"/>
                 <Button Content="{x:Static assets:Strings.Replace}" Command="{Binding ReplaceCommand}"/>
             </StackPanel>
-            <StackPanel Name="CgPanel" IsVisible="{Binding ShowExtras}" HorizontalAlignment="Left">
-                <TextBox Name="CgBox" Width="200" Text="{Binding Bg.CgName, Mode=OneTime}">
-                    <i:Interaction.Behaviors>
-                        <ia:EventTriggerBehavior EventName="TextChanged" SourceObject="{Binding #CgBox}">
-                            <ia:InvokeCommandAction Command="{Binding CgNameChangeCommand}" CommandParameter="{Binding #CgBox.Text}" />
-                        </ia:EventTriggerBehavior>
-                    </i:Interaction.Behaviors>
-                </TextBox>
-                <TextBlock Text="{Binding FlagDescription}"/>
-                <TextBlock Text="{Binding UnknownExtrasShortDescription}"/>
-                <TextBlock Text="{Binding UnknownExtrasByteDescription}"/>
+            <StackPanel Name="CgPanel" IsVisible="{Binding ShowExtras}" Orientation="Vertical"
+                        HorizontalAlignment="Left" Spacing="10">
+                <StackPanel Orientation="Horizontal" Spacing="3">
+                    <TextBox Name="CgBox" Width="200" Text="{Binding Bg.CgName, Mode=OneTime}">
+                        <i:Interaction.Behaviors>
+                            <ia:EventTriggerBehavior EventName="TextChanged" SourceObject="{Binding #CgBox}">
+                                <ia:InvokeCommandAction Command="{Binding CgNameChangeCommand}" CommandParameter="{Binding #CgBox.Text}" />
+                            </ia:EventTriggerBehavior>
+                        </i:Interaction.Behaviors>
+                    </TextBox>
+                    <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                         ToolTip.Tip="{x:Static assets:Strings.BackgroundEditorHelpCgName}"/>
+                </StackPanel>
+                <StackPanel Orientation="Vertical" Spacing="3">
+                    <TextBlock Text="{Binding FlagDescription}"/>
+                    <TextBlock Text="{Binding UnknownExtrasShortDescription}"/>
+                    <TextBlock Text="{Binding UnknownExtrasByteDescription}"/>
+                </StackPanel>
             </StackPanel>
         </StackPanel>
     </ScrollViewer>
