--- a/src/SerialLoops/Views/Editors/ScenarioCommandEditors/LoadSceneScenarioCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScenarioCommandEditors/LoadSceneScenarioCommandEditorView.axaml
@@ -10,8 +10,12 @@
              x:Class="SerialLoops.Views.Editors.ScenarioCommandEditors.LoadSceneScenarioCommandEditorView">
     <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="Auto,Auto"
           VerticalAlignment="Center" Margin="10">
-        <TextBlock Grid.Row="0" Grid.Column="0" Margin="5" Text="{x:Static assets:Strings.Command}"/>
-        <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding SelectedScenarioCommand.Verb}"/>
+        <TextBlock Grid.Row="0" Grid.Column="0" Margin="5" Text="{x:Static assets:Strings.Command}" VerticalAlignment="Center"/>
+        <StackPanel Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" Orientation="Horizontal" Spacing="3">
+            <TextBlock Text="{Binding SelectedScenarioCommand.Verb}" VerticalAlignment="Center"/>
+            <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                 ToolTip.Tip="{x:Static assets:Strings.ScenarioVerbHelpLOAD_SCENE}"/>
+        </StackPanel>
         <TextBlock Grid.Row="1" Grid.Column="0" Margin="5" Text="{x:Static assets:Strings.Script}"/>
         <StackPanel Orientation="Horizontal" Spacing="3" Grid.Row="1" Grid.Column="1" Margin="5">
             <ComboBox Margin="5" ItemsSource="{Binding Scripts}" SelectedItem="{Binding Scene}"/>
