--- a/src/SerialLoops/Views/Editors/ScenarioCommandEditors/ScenarioCommandEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScenarioCommandEditors/ScenarioCommandEditorView.axaml
@@ -4,13 +4,18 @@
              xmlns:vm="using:SerialLoops.ViewModels.Editors.ScenarioCommandEditors"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:assets="using:SerialLoops.Assets"
+             xmlns:utility="using:SerialLoops.Utility"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:DataType="vm:ScenarioCommandEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScenarioCommandEditors.ScenarioCommandEditorView">
     <Grid RowDefinitions="Auto,Auto" ColumnDefinitions="Auto,Auto"
           VerticalAlignment="Center" Margin="10">
-        <TextBlock Grid.Row="0" Grid.Column="0" Margin="5" Text="{x:Static assets:Strings.Command}"/>
-        <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding SelectedScenarioCommand.Verb}"/>
+        <TextBlock Grid.Row="0" Grid.Column="0" Margin="5" Text="{x:Static assets:Strings.Command}" VerticalAlignment="Center"/>
+        <StackPanel Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" Orientation="Horizontal" Spacing="3">
+            <TextBlock Text="{Binding SelectedScenarioCommand.Verb}" VerticalAlignment="Center"/>
+            <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                 ToolTip.Tip="{Binding SelectedScenarioCommand.Verb, Converter={x:Static utility:SLConverters.ScenarioVerbHelpConverter}}"/>
+        </StackPanel>
         <TextBlock Grid.Row="1" Grid.Column="0" Margin="5" Text="{x:Static assets:Strings.Parameter_Value}"/>
         <NumericUpDown Minimum="0" Maximum="{Binding MaxValue}" ClipValueToMinMax="True" FormatString="0"
                        Value="{Binding Parameter}" Grid.Row="1" Grid.Column="1" Margin="5"/>
