--- a/src/SerialLoops/Views/Editors/SystemTextureEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/SystemTextureEditorView.axaml
@@ -15,10 +15,23 @@
                    HorizontalAlignment="Left"/>
             <StackPanel Orientation="Horizontal" Spacing="3">
                 <Button Content="{x:Static assets:Strings.Export}" Command="{Binding ExportCommand}"/>
-                <Button Content="{x:Static assets:Strings.Replace}" Command="{Binding ReplaceCommand}"/>
-                <Button Content="{x:Static assets:Strings.Replace_with_Palette}" IsEnabled="{Binding !UsesCommonPalette}" Command="{Binding ReplaceWithPaletteCommand}"/>
+                <Button Command="{Binding ReplaceCommand}">
+                    <StackPanel Orientation="Horizontal" Spacing="3">
+                        <TextBlock Text="{x:Static assets:Strings.Replace}" VerticalAlignment="Center"/>
+                        <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                             ToolTip.Tip="{x:Static assets:Strings.SystemTextureReplaceHelp}"/>
+                    </StackPanel>
+                </Button>
+                <Button IsEnabled="{Binding !UsesCommonPalette}" Command="{Binding ReplaceWithPaletteCommand}">
+                    <StackPanel Orientation="Horizontal" Spacing="3">
+                        <TextBlock Text="{x:Static assets:Strings.Replace_with_Palette}" VerticalAlignment="Center"/>
+                        <Svg Path="avares://SerialLoops/Assets/Icons/Help.svg" Width="16" VerticalAlignment="Center"
+                             ToolTip.Tip="{x:Static assets:Strings.SystemTextureReplaceWithPaletteHelp}" ToolTip.ShowOnDisabled="True"/>
+                    </StackPanel>
+                </Button>
             </StackPanel>
-            <TextBlock IsVisible="{Binding UsesCommonPalette}" Text="{x:Static assets:Strings.This_system_texture_uses_a_common_palette__so_palette_replacement_has_been_disabled}"/>
+            <TextBlock IsVisible="{Binding UsesMainPalette}" Text="{x:Static assets:Strings.SystemTexturePaletteReplacementDisabled}"/>
+            <TextBlock IsVisible="{Binding UsesChessPalette}" Text="{x:Static assets:Strings.SystemTexturePaletteReplacementDisabledChess}"/>
             <HeaderedContentControl Header="{x:Static assets:Strings.Palette}" Width="264" HorizontalAlignment="Left">
                 <Image Source="{Binding PaletteBitmap, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
                        HorizontalAlignment="Left"
